Fix formatting of the about page on mobile and tablets

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ li.nav-option--mobile,
 li.nav-option--mobile--last
 {
     position: relative;
+
     padding: 2em 0 2em 0;
 }
 
@@ -160,13 +161,13 @@ li.nav-option--mobile:after
 
 .empty-span
 {
-  position:absolute;
-  width:100%;
-  height:100%;
-  top:0;
-  left: 0;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
 
-  z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 
 /* Index page */
@@ -836,6 +837,11 @@ p.spots
 
 @media only screen and (max-width: 1141px)
 {
+    .about-body
+    {
+        margin: 2em 2em 2em 2em;
+    }
+
     .course-options
     {
         flex-direction: column;
